# cpp-core-exercises

./: CMakeLists.txt  README.md
Arrays, 1st lesson/: CMakeLists.txt  main.cpp
Dars-3/: CMakeLists.txt  main.cpp
Dars-4/: CMakeLists.txt  main.cpp
Dars-5/: CMakeLists.txt  main.cpp
Dars-6/: CMakeLists.txt  main.cpp
Dars-8/: CMakeLists.txt  main.cpp
Dars_1/: CMakeLists.txt  main.cpp
Don_Don_Ziki/: CMakeLists.txt  main.cpp
For_Loop(exam_prep)/: CMakeLists.txt  main.cpp
Function_Overloading/: CMakeLists.txt  main.cpp
Game (1-100 gacha)/: CMakeLists.txt  main.cpp
Imtihon/: CMakeLists.txt  main.cpp
Imtihon2/: CMakeLists.txt  main.cpp
Inner_Cycles/: CMakeLists.txt  main.cpp
Lesson_2/: main.cpp
Linear_Algorithm/: CMakeLists.txt  main.cpp
Math functions(exam prep)/: CMakeLists.txt  main.cpp
Nested_Loop/: CMakeLists.txt  main.cpp
Nested_Loop(exam prep)/: CMakeLists.txt  main.cpp
New_Theme/: CMakeLists.txt  main.cpp
Rekursiya/: CMakeLists.txt  main.cpp
Stringlar/: CMakeLists.txt  main.cpp
Strings_Enhanced/: CMakeLists.txt  main.cpp
Switch_Case/: CMakeLists.txt  main.cpp
User-defined functions-2/: CMakeLists.txt  main.cpp
While_Loop/: CMakeLists.txt  main.cpp
exam_questions_1D_arrays/: CMakeLists.txt  main.cpp
if/Takrorlanuvchi_Algoritm/: CMakeLists.txt  main.cpp
if/switch(operators)/: CMakeLists.txt  main.cpp
imtihon savollari (2-modul, 1-31)/: CMakeLists.txt  main.cpp
os_term_project/: CMakeLists.txt
untitled2/: main.cpp
untitled3/: CMakeLists.txt  main.c
user-defined functions/: CMakeLists.txt  main.cpp
