cmake_minimum_required(VERSION 3.10)
project(MasterProject)
add_subdirectory(Arrays, 1st lesson)
add_subdirectory(Dars-3)
add_subdirectory(Dars-4)
add_subdirectory(Dars-5)
add_subdirectory(Dars-6)
add_subdirectory(Dars-8)
add_subdirectory(Dars_1)
add_subdirectory(Don_Don_Ziki)
add_subdirectory(exam_questions_1D_arrays)
add_subdirectory(For_Loop(exam_prep))
add_subdirectory(Function_Overloading)
add_subdirectory(Game (1-100 gacha))
add_subdirectory(if)
add_subdirectory(Imtihon)
add_subdirectory(Imtihon2)
add_subdirectory(imtihon savollari (2-modul, 1-31))
add_subdirectory(Inner_Cycles)
add_subdirectory(Lesson_2)
add_subdirectory(Linear_Algorithm)
add_subdirectory(Math functions(exam prep))
add_subdirectory(Nested_Loop)
add_subdirectory(Nested_Loop(exam prep))
add_subdirectory(New_Theme)
add_subdirectory(os_term_project)
add_subdirectory(Rekursiya)
add_subdirectory(Stringlar)
add_subdirectory(Strings_Enhanced)
add_subdirectory(SwitchCse)
add_subdirectory(Switch_Case)
add_subdirectory(untitled)
add_subdirectory(untitled1)
add_subdirectory(untitled2)
add_subdirectory(untitled3)
add_subdirectory(user-defined functions)
add_subdirectory(User-defined functions-2)
add_subdirectory(While_Loop)

